# google-photos-yoinker

./: README.md
javascript/: README.md  package-lock.json  package.json
javascript/src/: media-carousel.js  media-grid.js  yoink.css  yoink.js
javascript/test/: index.html
lambda_function/: lambda_function.py
testing/: hippity hoppity your photos are now my property.ipynb  pyproject.toml
