[tool.poetry]
name = "testing"
version = "0.1.0"
description = ""
authors = ["Arjun Gandhi <account@arjugandhi.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
